# rust_vanity

./: Cargo.toml  Makefile  README.md  USAGE.md  build.rs  compile_cuda.sh
cuda_src/: vanity.cu
resources/: vanity_kernel.ptx
src/: config.rs  main.rs  vanity.rs
src/cuda/: mod.rs  vanity_kernel.rs
